# gigabit_code

./: .gitignore  Cargo.toml  callgraph.dot  callgraph.dot.ps  callgrind.out.12122  callgrind.out.18167  callgrind.out.22868  callgrind.out.22950  callgrind.out.22998  callgrind.out.23396  callgrind.out.9497  callgrind.out.9615  ex.dot  my.dot  xdot
adcs/: Cargo.toml
adcs/src/: lib.rs
adcs/src/.cargo/: config.toml
adcs/src/control/: error.rs  gains.rs  main.rs  mod.rs  motors.rs
adcs/src/dist_est/: mats.rs  mod.rs
adcs/src/estimation/: correction.rs  gyros.rs  mod.rs  propogation.rs
adcs/src/miscellaneous/: mod.rs
adcs/src/verification/: mod.rs
opti/: mag0p05_nm.csv  (+4 more)
sim/: Cargo.toml  build.rs
sim/bit_one_step/: bit_one_step_pkg  buildInfo.mat  libbitonestep.c  libbitonestep.h  libbitonestep_types.h  main.h  rtwtypes.h
sim/bit_one_step/before_changeinnompitch/: buildInfo.mat  libbitonestep.h  libbitonestep_internal_types.h
sim/example scripts/: constants.rs  functions.rs  main.rs  main_rev1.rs  types.rs
sim/src/: 6point_gains_noflex.json  bhkst.kst  bhkstArchive.kst  bindings.rs  bit_prop_testing.kst  bit_prop_testing2.kst  copy.kst  disturbances.rs  est_kst.kst  flex.kst  gains (copy).json  gains copy.json  gains.json  gains2.json  gains_backup_flexwithosc.json  gains_dist_30as.json  gains_just_under_freq_modes.json  gains_sub_arcsecond_300s.json  gains_subarcsecond_noflex.json  gains_updated_flex_subarc.json  initialization.rs  json_handling.rs  logging.rs  main.rs  no_flex_ctrl_july17.json  sim_csv copy.rs  sim_csv.rs  sim_csv1.rs  sim_csvf64.rs
(+135 files in other folders)
