[package]
name = "adcs"
version = "0.1.0"
edition = "2021"
license =  "MIT"
description = "The Attitude Determination and Control for the Balloon Borne Imaging Telescope know as GigaBIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde_derive = "1"
serde = "1"
serde_json = "1.0.78"
nalgebra = "0.30.1"
log = "0.4"
log4rs = "1"
env_logger = "0.8"
chrono = "0.4"
astro = "2"
statrs = "0.15.0"
ndarray = "*"
ndarray-linalg = "*"

# latex in documentation
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/header.html" ]

[profile.dev]
debug = 1 # This is the default for dev profiles
#opt-level = 2